src/test/resources/amyc/nameAnalyzer/failing/UndefinedConstructor2.amy
object Constructor
  abstract class Foo
  fn foo(f: Foo): Foo = { f match {
    case Bar(_) => f
  }}
end Constructor
